--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="youtube"><a href="https://www.youtube.com/channel/UCtqutUZ0oC3iFZx-Ijk3Emg"><img class="logo"
                         src="youtube.png" /></a></div>
-            <div class="instagram"><a href="https://instagram.com/vianahub/">
+            <div class="instagram"><a href="https://instagram.com/vianahub">
                     <span class="logo"><img src="instagram.png" /></span></a>
             </div>
         </div>
