--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <meta name="created" content="2020-04-20T3:14:15+0430">
     <meta name="modified" content="2020-04-20T3:14:15+0430">
     <link rel="canonical" href="https://vianahub.com">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
     <link rel="stylesheet" href="styles.css">
 
     <title>Vianahub | ویاناهاب</title>
@@ -39,7 +39,7 @@
     <div class="container">
         <div class="header">
             <div class="logo">
-                <img src="logo.png">
+                <img src="images/logo.png">
             </div>
             <div class="description">
                 <p>
@@ -50,17 +50,19 @@
             </div>
         </div>
         <div class="feed">
-            <div class="twitter"><a href="https://twitter.com/vianahub"><img class="logo" src="twitter.png" /></a></a>
+            <div class="twitter"><a href="https://twitter.com/vianahub"><img class="logo"
+                        src="images/twitter.png" /></a></a>
             </div>
-            <div class="virgool"><a href="https://virgool.io/vianahub"><img class="logo" src="virgool.png" /></a></div>
-            <div class="anchor"><a href="https://anchor.fm/vianahub"><img class="logo" src="anchor.png" /></a>
+            <div class="virgool"><a href="https://virgool.io/vianahub"><img class="logo" src="images/virgool.png" /></a>
             </div>
-            <div class="medium"><a href="https://medium.com/vianahub"><img class="logo" src="medium.png" /></a>
+            <div class="anchor"><a href="https://anchor.fm/vianahub"><img class="logo" src="images/anchor.png" /></a>
+            </div>
+            <div class="medium"><a href="https://medium.com/vianahub"><img class="logo" src="images/medium.png" /></a>
             </div>
             <div class="youtube"><a href="https://www.youtube.com/channel/UCtqutUZ0oC3iFZx-Ijk3Emg"><img class="logo"
-                        src="youtube.png" /></a></div>
+                        src="images/youtube.png" /></a></div>
             <div class="instagram"><a href="https://instagram.com/vianahub">
-                    <span class="logo"><img src="instagram.png" /></span></a>
+                    <span class="logo"><img src="images/instagram.png" /></span></a>
             </div>
         </div>
     </div>
